favourite department fixed
